<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdvancedSearchOptionActivity" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_option"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="20dp"
        android:text="@string/size_string" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="20dp"
        android:text="@string/color_string" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="20dp"
        android:text="@string/type_string" />

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_below="@+id/tvType"
        android:layout_marginTop="20dp"
        android:text="@string/site_string" />

    <EditText
        android:id="@+id/etSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSize"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSize"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="size....." />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvColor"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvColor"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="color....." />

    <EditText
        android:id="@+id/etType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvType"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvType"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="type....." />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSite"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSite"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="site....." />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveOptions"
        android:text="@string/save_string" />

</RelativeLayout>
